# ModioDirect

./: MANIFEST.in  ModioDirect.py  README.md  games.json  pyproject.toml
.github/workflows/: publish.yml  pyproject.toml
ModioDirect/: LICENSE  README.md  modiodirect.py  requirements.txt
ModioDirect/docs/: HOW_IT_WORKS.md
docs/: HOW_IT_WORKS.md
