[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modiodirect"
version = "1.0.0"
description = "Crash-proof direct downloader for mod.io (official API only)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "TheRootExec"}
]
keywords = ["mod.io", "mods", "downloader", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "requests",
  "tqdm"
]

[project.scripts]
modiodirect = "ModioDirect:main"

[tool.setuptools]
py-modules = ["ModioDirect"]
include-package-data = true
